--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,25 @@
         android:background="@color/main_color"
         android:orientation="horizontal"
         >
-
+        <Button
+            android:id="@+id/btn_recent_session"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:text="消息"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            />
+        <Button
+            android:id="@+id/btn_contacts"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:text="通讯录"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            />
     </LinearLayout>
 </RelativeLayout>
