--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,27 @@
     android:layout_height="match_parent"
    >
 <!--actionbar-->
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/action_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="@color/main_color"
         >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="MyChat"
             android:gravity="center"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
-            android:textColor="@android:color/white"
             android:textStyle="bold"
             />
-    </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/line_color"
+            android:layout_alignParentBottom="true"
+            />
+    </RelativeLayout>
 
     <!--显示界面-->
     <FrameLayout
@@ -39,7 +44,6 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:layout_alignParentBottom="true"
-        android:background="@color/main_color"
         android:orientation="horizontal"
         >
         <Button
@@ -49,7 +53,7 @@
             android:layout_weight="1"
             android:background="@null"
             android:text="消息"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
             />
         <Button
@@ -59,8 +63,15 @@
             android:layout_weight="1"
             android:background="@null"
             android:text="通讯录"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="16sp"
             />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/line_color"
+        android:layout_above="@+id/nav_layout"
+        />
 </RelativeLayout>
