--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="main_color">#D4237A</color>
+    <color name="line_color">#f2f2f2</color>
 </resources>
