--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,21 +11,17 @@
         android:id="@+id/action_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
+        android:elevation="5dp"
+        android:background="@color/main_color"
         >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="MyChat"
             android:gravity="center"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
+            android:textColor="@android:color/white"
             android:textStyle="bold"
-            />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@color/line_color"
-            android:layout_alignParentBottom="true"
+            android:textSize="20sp"
             />
         <ImageView
             android:id="@+id/img_search"
@@ -38,14 +34,48 @@
             />
     </RelativeLayout>
 
-    <!--显示界面-->
-    <FrameLayout
-        android:id="@+id/frame_layout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/action_bar_layout"
-        android:layout_above="@+id/nav_layout"
-        />
+        android:orientation="horizontal"
+        >
+        <!--左侧菜单-->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:background="@color/sub_color"
+            >
+            <RelativeLayout
+                android:layout_width="64dp"
+                android:layout_height="64dp">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/ic_message_black_24dp"
+                    />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_triangle_left"
+                    />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <!--显示内容-->
+        <FrameLayout
+            android:id="@+id/frame_layout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            />
+
+    </LinearLayout>
 
     <!--底部导航栏-->
     <LinearLayout
@@ -77,10 +107,4 @@
             />
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/line_color"
-        android:layout_above="@+id/nav_layout"
-        />
 </RelativeLayout>
