--- a/app/src/main/res/layout/activity_account_profile.xml
+++ b/app/src/main/res/layout/activity_account_profile.xml
@@ -8,6 +8,7 @@
         android:id="@+id/action_bar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
+        android:background="@color/main_color"
         >
 
         <ImageView
